# ctds

./: .gitignore  README.md  test.py  train_ctds.py  train_nets.py
config/: config.md  ctds_config.yaml  nets_config.yaml
config/ctds_config/: interpolant_tempered.yaml  learned_esh.yaml  learned_tempered.yaml
config/nets_config/: interpolant_esh.yaml  interpolant_inertial.yaml  interpolant_overdamped.yaml  learned_baseline.yaml  learned_esh.yaml  learned_inertial.yaml  learned_overdamped.yaml
nets_standalone/: README.md  environment.yml  pyproject.toml
nets_standalone/configs/: learned_overdamped.toml
nets_standalone/nets/: __init__.py  base.py  config.py  constants.py  density_paths.py  distributions.py  dynamics.py  langevin.py  metrics.py  misc.py  model.py  nn.py  plotting.py  train.py  vector_fields.py
nets_standalone/nets/conf/: asymmetric_two_mode_1d.yaml  asymmetric_two_mode_2d.yaml  learned_overdamped.yaml  linear_random_gmm.yaml  toy_cpu.yaml
nets_standalone/nets/experiments/: __init__.py  train.py
nets_standalone/nets_standalone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notebooks/: camera_ready.ipynb  ctds.ipynb  extended_figures.ipynb  nets.ipynb  notebook_guide.md
pretrained_checkpoints/linear/: baseline.ckpt  ctds.ckpt  ctds_esh.ckpt  ctds_jarzynski.ckpt  inertial_jarzynski.ckpt  nets_esh.ckpt  nets_inertial.ckpt  nets_overdamped.ckpt  nets_overdamped_jarzynski.ckpt
scripts/: pre-commit-hook.sh  setup.sh
src/datasets/: __init__.py
src/models/: ctds.py  nets.py  utils.py
src/simulation/: mcmc.py  (+3 more)
(+11 files in other folders)
